<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Globals -->
    <string name="app_name">Cache Cleaner</string>
    <string name="author_name" translatable="false">Frozen Developers</string>

    <!-- Menu items -->
    <string name="action_clean">Clean</string>
    <string name="action_rescan">Rescan</string>
    <string name="action_search">Search</string>
    <string name="action_sort_by_name">Sort by name</string>
    <string name="action_sort_by_size">Sort by size</string>
    <string name="action_settings">Settings</string>

    <!-- Apps list header -->
    <string name="apps_list_header_title">Device memory</string>
    <string name="apps_list_header_used_prefix">Used</string>
    <string name="apps_list_header_cache_prefix">Cache</string>
    <string name="apps_list_header_free_prefix">Free</string>
    <string name="apps_list_header_footer">App cache usage</string>
    <string name="apps_list_header_memory"><xliff:g id="memory">%1$s</xliff:g></string>

    <!-- Empty list view -->
    <string name="empty_cache">Cache is empty.</string>
    <string name="no_such_app">No such application.</string>

    <!-- Progress bar -->
    <string name="scanning">Scanning…</string>
    <string name="scanning_m_of_n">Scanning %1$d/%2$d</string>

    <!-- Progress dialog -->
    <string name="cleaning_cache">Cleaning cache</string>
    <string name="cleaning_in_progress">Cleaning in progress…</string>

    <!-- Toasts -->
    <string name="cleaned">Cache cleaned</string>
    <string name="toast_could_not_clean">Could not clean the cache</string>
    <string name="toast_could_not_clean_reason">Could not clean the cache: %1$s</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="main_preferences">Main preferences</string>
    <string name="about">About</string>

    <!-- Clean on app startup preference -->
    <string name="clean_on_app_startup">Clean on app startup</string>
    <string name="clean_on_app_startup_summary">Automatically clean cache on application startup</string>
    <string name="clean_on_app_startup_key" translatable="false">clean_on_app_startup</string>

    <!-- Exit after clean up -->
    <string name="exit_after_clean">Exit after clean up</string>
    <string name="exit_after_clean_summary">Exit after Clean button is clicked and clean up is completed</string>
    <string name="exit_after_clean_key" translatable="false">exit_after_clean</string>

    <!-- Clean on system startup preference -->
    <string name="clean_on_system_startup">Clean on system startup</string>
    <string name="clean_on_system_startup_summary">Automatically clean cache on system startup</string>
    <string name="clean_on_system_startup_key" translatable="false">clean_on_device_startup</string>

    <!-- About -->
    <string name="about_app">About Cache Cleaner</string>
    <string name="author">Author</string>
    <string name="version_number">Version number</string>
    <string name="version_number_unknown">Unknown</string>
    <string name="open_source_licences">Open source licences</string>
    <string name="special_thanks">Special thanks</string>
    <string name="samuels_graphics" translatable="false">Samuel\'s Graphics</string>
    <string name="samuels_graphics_desc">Icon and Play Store banner design</string>

    <!-- 'Sort by' preference -->
    <string name="sort_by_key" translatable="false">sort_by</string>

    <!-- Rationales -->
    <string name="rationale_title">Insufficient permissions</string>
    <string name="rationale_storage">Storage permission is needed to clean external cache.</string>

    <string name="clean_help_6.0">Tap "Cached data" and click "OK" to clear all cache</string>

</resources>
