<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

    <android.support.v7.preference.PreferenceCategory android:title="@string/main_preferences">

        <android.support.v7.preference.CheckBoxPreference
            android:key="@string/clean_on_app_startup_key"
            android:summary="@string/clean_on_app_startup_summary"
            android:title="@string/clean_on_app_startup" />

        <android.support.v7.preference.CheckBoxPreference
            android:key="@string/exit_after_clean_key"
            android:summary="@string/exit_after_clean_summary"
            android:title="@string/exit_after_clean" />

        <android.support.v7.preference.CheckBoxPreference
            android:key="@string/clean_on_system_startup_key"
            android:summary="@string/clean_on_system_startup_summary"
            android:title="@string/clean_on_system_startup" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/about">

        <Preference android:title="@string/about_app">

            <intent
                android:action="com.frozendevs.cache.cleaner.SETTINGS_ABOUT"
                android:targetClass="com.frozendevs.cache.cleaner.activity.SettingsActivity"
                android:targetPackage="com.frozendevs.cache.cleaner" />

        </Preference>

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
