<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="?attr/listPreferredItemPaddingLeft"
    android:paddingLeft="?attr/listPreferredItemPaddingLeft"
    android:paddingRight="?attr/listPreferredItemPaddingRight"
    android:paddingStart="?attr/listPreferredItemPaddingLeft">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:ellipsize="marquee"
        android:gravity="left|center_vertical"
        android:singleLine="true"
        android:text="@string/apps_list_header_title"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="?attr/colorAccent" />

    <view
        android:id="@+id/color_bar"
        class="com.android.settings.applications.LinearColorBar"
        android:layout_width="match_parent"
        android:layout_height="16sp"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32sp"
        android:layout_marginTop="8sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16sp"
            android:layout_height="16sp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@color/apps_list_system_memory" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:maxLines="1"
                android:text="@string/apps_list_header_system_prefix"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/textColorSecondary" />

            <ImageView
                android:layout_width="0dip"
                android:layout_height="1px"
                android:layout_marginEnd="1dip"
                android:layout_marginStart="1dip"
                android:layout_weight="1"
                android:baselineAlignBottom="true"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/dotted_line_480px" />

            <TextView
                android:id="@+id/systemSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16sp"
            android:layout_height="16sp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@color/apps_list_cache_memory" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:maxLines="1"
                android:text="@string/apps_list_header_cache_prefix"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/textColorSecondary" />

            <ImageView
                android:layout_width="0dip"
                android:layout_height="1px"
                android:layout_marginEnd="1dip"
                android:layout_marginStart="1dip"
                android:layout_weight="1"
                android:baselineAlignBottom="true"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/dotted_line_480px" />

            <TextView
                android:id="@+id/cacheSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16sp"
            android:layout_height="16sp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@color/apps_list_free_memory" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:maxLines="1"
                android:text="@string/apps_list_header_free_prefix"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/textColorSecondary" />

            <ImageView
                android:layout_width="0dip"
                android:layout_height="1px"
                android:layout_marginEnd="1dip"
                android:layout_marginStart="1dip"
                android:layout_weight="1"
                android:baselineAlignBottom="true"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/dotted_line_480px" />

            <TextView
                android:id="@+id/freeSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8sp"
        android:ellipsize="marquee"
        android:gravity="left|center_vertical"
        android:singleLine="true"
        android:text="@string/apps_list_header_footer"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="?attr/colorAccent" />

</LinearLayout>
